[tool.poetry]
name = "cs321n"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.3"
imageio = "^2.22.1"
matplotlib = "^3.6.1"
black = {extras = ["jupyter"], version = "^22.10.0"}
scipy = "^1.9.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
